force-app/main/default/objects/Engagement_Assignee__c/Engagement_Assignee__c.object-meta.xml
<CustomObject>
    <label>Mobile Employee</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Employees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>