force-app/main/default/objects/Engagement_Assignee__c/fields/Actual_Assignment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Assignment_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Assignment End Date</label>
    <type>Date</type>
</CustomField>