force-app/main/default/objects/Engagement_Assignee__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Term Assignment</fullName>
            </value>
            <value>
                <fullName>Short Term Assignment</fullName>
            </value>
            <value>
                <fullName>International Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>