force-app/main/default/objects/Engagement_Assignee__c/fields/Departure_Country__c.field-meta.xml
<CustomField>
    <fullName>Departure_Country__c</fullName>
    <label>Originating Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>