force-app/main/default/objects/Engagement_Assignee__c/fields/Employer_Provided_Email__c.field-meta.xml
<CustomField>
    <fullName>Employer_Provided_Email__c</fullName>
    <description>Email provided by the Employer for purposes of user provisioning</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Provided Email</label>
    <type>Email</type>
</CustomField>