force-app/main/default/objects/Engagement_Assignee__c/fields/Engagement_Assignee_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Assignee_Name_Formula__c</fullName>
    <formula>First_Name__c + &quot; &quot; + Last_Name__c + &quot; (&quot; +  Engagements__r.Name + &quot;)&quot;</formula>
    <label>Engagement Assignee Name Formula</label>
    <type>Text</type>
</CustomField>