force-app/main/default/objects/Engagement_Assignee__c/fields/Engagement_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name__c</fullName>
    <formula>Engagements__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Name</label>
    <type>Text</type>
</CustomField>