force-app/main/default/objects/Engagement_Assignee__c/fields/Engagements__c.field-meta.xml
<CustomField>
    <fullName>Engagements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Mobile Employees</relationshipLabel>
    <relationshipName>Engagement_Assignees</relationshipName>
    <type>Lookup</type>
</CustomField>