force-app/main/default/objects/Engagement_Assignee__c/fields/Estimated_Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Assignment_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Assignment Start Date</label>
    <type>Date</type>
</CustomField>