force-app/main/default/objects/Engagement_Assignee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>