force-app/main/default/objects/Engagement_Assignee__c/fields/Home_Equalized_Locality__c.field-meta.xml
<CustomField>
    <fullName>Home_Equalized_Locality__c</fullName>
    <label>Home (Equalized) Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Home_Equalized_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Locality</valueSetName>
    </valueSet>
</CustomField>