force-app/main/default/objects/Engagement_Assignee__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>This field retrieves the Mobile  from the Account when the Account allows or shares the Mobile with the employee.</description>
    <formula>IF(
    
    Assignee__r.Share_Mobile_with_Employer__c ,
    Assignee__r.PersonContact.MobilePhone ,
   &quot;Information is not shared&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>