force-app/main/default/objects/Engagement_Assignee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field retrieves the phone number from the Account when the Account allows or shares the phone number with the employee.</description>
    <formula>IF(
    Assignee__r.Share_Phone_with_Employer__c ,
    Assignee__r.Phone ,
   &quot;Information is not shared&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>