force-app/main/default/objects/Engagement_Assignee__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>JIRA:AGMPB-257</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the full phone number in local format, starting with the country code (e.g., +49 151 12345678).</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>