force-app/main/default/objects/Engagement_Assignee__c/fields/Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email__c</fullName>
    <description>This field retrieves the Primary Email from the Account when the Account allows or shares the Primary Email with the employee.</description>
    <formula>IF(
 Assignee__r.Share_Primary_Email_with_Employer__c ,
    Assignee__r.PersonContact.Primary_Email__c ,
   
   &quot;Information is not shared&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>