force-app/main/default/objects/Engagement_Assignee__c/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>This field retrieves the Secondary Email from the Account when the Account allows or shares the Secondary Email with the employee.</description>
    <formula>IF(
    Assignee__r.Share_Secondary_Email_with_Employer__c ,
    Assignee__r.PersonContact.Secondary_Email__c ,
   &quot;Information is not shared&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Email</label>
    <type>Text</type>
</CustomField>