force-app/main/default/objects/Engagement_Assignee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagements__c</columns>
    <columns>Assignee__c</columns>
    <columns>Status__c</columns>
    <columns>Assignment_Type__c</columns>
    <columns>Departure_Country__c</columns>
    <columns>Assignment_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>